--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
       android:text="@string/app_name"/>
 
   <include
-      layout="@layout/screen_main"
+      layout="@layout/screen_primary"
       android:id="@+id/primary_layout"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
