--- a/app/src/main/res/layout/screen_secondary.xml
+++ b/app/src/main/res/layout/screen_secondary.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/app_primary_dark"
+    android:background="@color/app_assent_light"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
