--- a/app/src/main/res/layout/screen_primary.xml
+++ b/app/src/main/res/layout/screen_primary.xml
@@ -13,7 +13,7 @@
       style="@style/TextTitle"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:text="This is the primary view"
+      android:text="@string/primary_screen_title"
       />
 
 </RelativeLayout>
