--- a/app/src/main/res/layout/screen_secondary.xml
+++ b/app/src/main/res/layout/screen_secondary.xml
@@ -13,7 +13,7 @@
       style="@style/TextTitleLight"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:text="This is a secondary view"
+      android:text="@string/secondary_screen_title"
       />
 
 </LinearLayout>
