refactor package names

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -58,6 +58,7 @@
   </style>
 
   <style name="FabButton" parent="AppButton">
+    <item name="android:gravity">center</item>
     <item name="android:background">@drawable/button_fab</item>
   </style>
 
